Feat: исправлены ошибки выявленные в на первом review